[gd_scene load_steps=2 format=3 uid="uid://b17d1wuv4hjhn"]

[ext_resource type="Script" path="res://Quiz/Scripts/controllers/game_controller.gd" id="1_qaqys"]

[node name="Main1" type="CanvasLayer"]
script = ExtResource("1_qaqys")

[node name="Control" type="Control" parent="."]
custom_minimum_size = Vector2(1080, 720)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -540.0
offset_top = -360.0
offset_right = 540.0
offset_bottom = 360.0
grow_horizontal = 2
grow_vertical = 2

[node name="qInfo" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -500.0
offset_right = 500.0
offset_bottom = 504.0
grow_horizontal = 2

[node name="QuestionText" type="Label" parent="Control/qInfo"]
custom_minimum_size = Vector2(1000, 100)
layout_mode = 2
text = "QuizRush"
horizontal_alignment = 1
vertical_alignment = 1

[node name="imageHolder" type="Panel" parent="Control/qInfo"]
custom_minimum_size = Vector2(1000, 400)
layout_mode = 2

[node name="questionImage" type="TextureRect" parent="Control/qInfo/imageHolder"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="qHolder" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -494.0
offset_top = -204.0
offset_right = 506.0
offset_bottom = 83.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 10

[node name="Option1" type="Button" parent="Control/qHolder"]
custom_minimum_size = Vector2(1000, 50)
layout_mode = 2

[node name="Option2" type="Button" parent="Control/qHolder"]
custom_minimum_size = Vector2(1000, 50)
layout_mode = 2

[node name="Option3" type="Button" parent="Control/qHolder"]
custom_minimum_size = Vector2(1000, 50)
layout_mode = 2

[node name="Option4" type="Button" parent="Control/qHolder"]
custom_minimum_size = Vector2(1000, 50)
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
offset_right = 40.0
offset_bottom = 40.0

[node name="Label2" type="Label" parent="ColorRect"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
